# zed-settings-sync

./: .gitignore  .prettierrc.json  ARCHITECTURE.md  Cargo.toml  LICENSE.txt  README.md  ROADMAP.md  codebook.toml  extension.toml  precommit.toml  rustfmt.toml
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md
.github/actions/check/: action.yml
.github/actions/install-nextest/: action.yml
.github/actions/install-rust/: action.yml
.github/workflows/: check.yml  check_and_test.yml  release.yml  release_cli.yml  release_lsp.yml
.zed/: settings.json  tasks.json
cli/: Cargo.toml
cli/src/: file_loader.rs  main.rs
common/: Cargo.toml
common/src/: config.rs  interactive_io.rs  lib.rs  sync.rs  test_support.rs
common/src/sync/: client.rs  error.rs  local_file_data.rs
common/src/sync/client/: github_client.rs
docs/: CREATE_GITHUB_TOKEN.md  CREATE_SETTINGS_GIST.md
lsp/: Cargo.toml  README.md
lsp/src/: app_state.rs  backend.rs  logger.rs  lsp_backend.rs  main.rs  mocks.rs  service.rs  sync.rs  watching.rs
lsp/src/sync/: client.rs  file_data.rs  local_file_data.rs
lsp/src/watching/: path_store.rs  path_watcher.rs  store.rs  watched_path.rs  watched_set.rs  zed_config.rs
src/: config.rs  file_loader.rs  lib.rs  main.rs  settings_sync.rs  std_interactive_io.rs  sync.rs  test_support.rs
test_support/: Cargo.toml
test_support/src/: lib.rs
watcher/: Cargo.toml
watcher/src/: main.rs
xtask-lsp-install/: Cargo.toml
xtask-lsp-install/src/: main.rs
xtask-watcher-install/: Cargo.toml
xtask-watcher-install/src/: main.rs
