[package]
name = "zed-settings-sync"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["common", "lsp", "xtask-lsp-install"]

[workspace.dependencies]
anyhow = "1.0.100"
jsonc-parser = { version = "0.28.0", features = ["cst", "serde"] }
octocrab = "0.48.1"
zed_extension_api = "0.7.0"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
mockall = { version = "0.14.0" }
assert_fs = "1.1.3"
paths = { git = "https://github.com/zed-industries/zed.git" }

[dependencies]
anyhow = { workspace = true }
jsonc-parser = { workspace = true }
octocrab = { workspace = true }
zed_extension_api = { workspace = true }
tokio = { workspace = true }
paths = { workspace = true }
assert_fs = { workspace = true }
mockall = { workspace = true }
common = { path = "./common" }
clap = { version = "4.5.53", features = ["derive"] }
mockall_double = "0.3.1"

[lib]
crate-type = ["cdylib"]

[workspace.lints]
[workspace.lints.clippy]
# yes, Cloudflare, I'm looking at you
unwrap_used = "deny"
expect_used = "deny"
suspicious = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
correctness = "deny"
style = "deny"
