[package]
name = "zed-settings-sync-cli"
description = "A CLI tool for Zed editor settings-sync extension"
version = "0.0.1-alpha.5"
edition = "2024"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
jsonc-parser = { workspace = true }
octocrab = { workspace = true }
tokio = { workspace = true }
paths = { workspace = true }
common = { path = "../common" }
clap = { version = "4.5.53", features = ["derive"] }
mockall_double = "0.3.1"

[dev-dependencies]
assert_fs = { workspace = true }
ctor = { workspace = true }
mockall = { workspace = true }
common = { path = "../common", features = ["test-support"] }
test_support = { path = "../test_support" }
