[package]
name = "common"
version = "0.0.1-alpha.1"
edition = "2024"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
jsonc-parser = { workspace = true }
octocrab = { workspace = true }
serde = { workspace = true }
zed_extension_api = { workspace = true }
paths = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
mockall = { workspace = true }
assert_fs = { workspace = true }
rpassword = "7.4.0"
async-trait = "0.1.89"
