[package]
name = "zed-settings-sync-lsp"
version = "0.0.1-alpha.1"
edition = "2024"

[lints]
workspace = true

[dependencies]
anyhow = "1.0.100"
debug-ignore = "1.0.5"
interprocess = "2.2.3"
notify = "8.2.0"
octocrab = "0.47.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["io-std", "macros", "rt-multi-thread"] }
tower-lsp = "0.20.0" # TODO: upgrade
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
zed_paths = { git = "https://github.com/zed-industries/zed.git", package = "paths" }
